# rag-doc-intelligence-system

./: .env.example  .gitignore  Makefile  PROJECT_CONTEXT.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml
app/api/: main.py
app/ingest/: cli.py
backend/app/: main.py
backend/app/api/v1/routes/: health.py  ingest.py  query.py
backend/app/api/v1/schemas/: ingest.py  query.py
backend/app/clients/: pinecone.py  redis.py
backend/app/core/: config.py  errors.py  logging.py  metrics.py  rate_limit.py  security.py
backend/app/services/cache/: redis.py
backend/app/services/embed/: fastembed.py
backend/app/services/ingest/: chunker.py  document_store.py  job_runner.py  loader.py
backend/app/services/llm/: __init__.py  openai_chat.py
backend/app/services/rag/: pipeline.py
backend/app/services/rerank/: bge.py
backend/app/services/retrieve/: pinecone.py
backend/app/utils/: file.py  text.py
backend/tests/api/: test_query_response.py
backend/tests/services/: test_chunker.py  test_document_store_fallback.py  test_text_utils.py
frontend/: streamlit_app.py
rag_doc_intelligence_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
