[project]
name = "rag-doc-intelligence-system"
version = "0.1.0"
description = "Production-ready RAG system"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pypdf>=4.0",
  "fastembed>=0.3",
  "pinecone>=3.0",
  "redis>=5.0",
  "requests>=2.31",
  "streamlit>=1.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
pythonpath = ["."]
